# crous

./: .gitignore  CHANGELOG.md  CODEBASE-AUDIT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_TODO.md  DEVELOPMENT.md  FILES_INDEX.md  FINAL_REPORT.txt  LICENSE  QUICKSTART.md  RELEASE_CHECKLIST.md  SECURITY.md  benchmark_suite.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  test_flux_integration.py
.github/workflows/: ci.yml
crous/: __init__.py  pycrous.c  pycrous_old.c
crous-docx/: ENHANCEMENT_OVERVIEW.md  docusaurus.config.ts  package.json  sidebars.ts
crous-docx/docs/: intro.md
crous-docx/docs/api/: _category_.json  reference.md
crous-docx/docs/contributing/: _category_.json  developer-guide.md  versioning.md
crous-docx/docs/guides/: custom-serializers.md  installation.md  user-guide.md
crous-docx/docs/internals/: _category_.json  architecture.md
crous-docx/src/components/: index.tsx  styles.module.css
crous-docx/src/components/HomepageFeatures/: index.tsx  styles.module.css
crous-docx/src/css/: custom.css
crous-docx/src/pages/: index.module.css  index.tsx
crous/include/: crous.h  crous_crout.h  crous_types.h
crous/src/c/binary/: binary.c
crous/src/c/crout/: crout.c
crous/src/c/flux/: flux_lexer.c  flux_parser.c  flux_serializer.c
crous/src/c/lexer/: lexer.c
crous/src/c/parser/: parser.c
crousDocs/: netlify.toml  package-lock.json  package.json
crousDocs/app/: app.css  root.tsx  routes.ts
crousDocs/app/components/: ArchitectureSvg.tsx  Callout.tsx  CodeBlock.tsx  Footer.tsx  GitHubStats.tsx  Navbar.tsx  SdkIcons.tsx
crousDocs/app/routes/: home.tsx
crousDocs/app/routes/docs/: layout.tsx  overview.tsx
crousDocs/app/routes/docs/nodejs/: api-reference.tsx  custom-types.tsx  error-handling.tsx  file-io.tsx  getting-started.tsx  index.tsx  layout.tsx  serialization.tsx  types.tsx
crousDocs/app/routes/docs/python/: api-reference.tsx  crout-format.tsx  custom-types.tsx  error-handling.tsx  getting-started.tsx  index.tsx  layout.tsx  serialization.tsx  streaming.tsx  types.tsx
crousDocs/netlify/functions/: server.ts
crousDocs/public/: manifest.json  robots.txt  sitemap.xml
nodejs/: .gitignore  API_COMPARISON.md  BUILDING.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_REPORT.md  binding.gyp  examples.js  index.d.ts  index.js  package-lock.json  package.json
nodejs/src/: crous_node.c
nodejs/test/: test_advanced.js  test_basic.js  test_performance.js  test_python_compat.js
tests/: test_containers.py  test_crout.py  test_custom_serializers.py  test_streaming.py  test_tagged_types.py  test_thread_safety.py
